--- a/index.html
+++ b/index.html
@@ -5,23 +5,25 @@
         <title>jkzayah!</title>
         <style>
             body{
-                background-color: blue;
-            }
-            #top{
-                text-align: center;
                 font-family: Sans-serif;
+            }
+            .header {
+              padding: 60px;
+              text-align: center;
+              background: #004ecc;
+              color: white;
+              font-size: 20px;
             }
             .box{
-                background-color: lightblue;
+                background-color: #3e71c2;
                 text-align: center;
-                font-family: Sans-serif;
                 margin-left: 15%;
                 margin-right: 15%;
                 margin-bottom: 25px;
                 padding: 10px;
                 outline: 5px ridge black;
                 font-weight: bold;
-                font-size: 12px;
+                font-size: 15px;
             }
             .box:hover{
                background-color:#FF0000;
@@ -31,8 +33,10 @@
     </head>
     <body>
         
-        <h1 id="top">Welcome to jkzayah.github.io!</h1>
-        <h2 id="top">"You cant really do anything..." -JKzayah, CEO & founder</h2>
+        <div class="header">
+          <h1>Welcome to jkzayah.github.io!</h1>
+          <h2>"You cant really do anything..." -JKzayah, CEO & founder</h2>
+        </div>
         
         <p class="box">About us</p>
         <p class="box">Products & services</p>
