Changed page title
Changed to 'JKZayah!'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My CSS Grid!</title>
+    <title>JKZayah!</title>
     <style>
         body{
             color: #fff;
