Removed body margin
Added margin: 0; and padding: 0; to body tag.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
             color: #fff;
             font-family: 'Arial';
             text-align: center;
+            margin: 0;
+            padding: 0;
         }
         #content{
             display: grid;
