--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <p>
               At jkzayah.github.io, we pride ourselves in bringing you an obscure landing page. The "we" being royal of course.
               When our founder JKzayah first created this marvel of a website he stood determined to always refer to himself in the third
-              person in a deceptive attempt to give visitors the impression that he had friends.
+              person.
 
             </p>
         </div>
